--- a/Meharaj.MaharjanProblemSet1.ipynb
+++ b/Meharaj.MaharjanProblemSet1.ipynb
@@ -39,7 +39,29 @@
     "{\n",
     "    i++;\n",
     "}\n",
-    "Console.WriteLine(\"The number of letters in the givern word is \" +i);"
+    "Console.WriteLine(\"The number of letters in the givern word is \" +i);\n",
+    "\n",
+    "b.\n",
+    "Answer:\n",
+    " string givenString = \"Supercalifragilisticexpialidocious\";\n",
+    " string subString = \"ice\";\n",
+    "bool Contains= givenString.Contains(subString);\n",
+    "Console.WriteLine(\"the given string = \" + givenString); \n",
+    "Console.WriteLine(\"the subString  =\" + subString);\n",
+    "Console.WriteLine(\"Given '{0}' contains the '{1}' = \" + Contains,givenString,subString); \n",
+    "\n",
+    "c.\n",
+    "Answer:\n",
+    " string[] longWords = { \"Supercalifragilisticexpialidocious\", \"Honorificabilitudinitatibus\", \"Bababadalgharaghtakamminarronnkonn\" };\n",
+    "\n",
+    " Console.WriteLine(longWords.Max());\n",
+    "\n",
+    "d.\n",
+    "Answer:\n",
+    " string[] composers = { \"Berlioz\", \"Borodin\", \"Brian\", \"Bartok\", \"Bellini\", \"Buxtehude\", \"Bernstein\" };\n",
+    "Array.Sort(composers);\n",
+    "Console.WriteLine(\"The first composer in the dictionary is \" + composers.First());\n",
+    "Console.WriteLine(\"And the last composer in the dictionary is \" + composers.Last());\n"
    ]
   },
   {
@@ -252,8 +274,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "02b06c25",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'bloodtype.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19116/3002810043.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"There are \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'OO '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" patients of blood type OO\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mbldcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19116/3002810043.py\u001b[0m in \u001b[0;36mbldcount\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mbldcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'bloodtype.txt'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtxt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[0mtext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtxt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mtxt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'bloodtype.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "Question 7\n",
+    "Answer:\n",
+    "    \n",
+    "def bldcount():\n",
+    "    with open('bloodtype.txt', 'r') as txt:\n",
+    "        text = txt.readlines()\n",
+    "        txt.close()\n",
+    "        print(text)\n",
+    "        for count in text:\n",
+    "            print(\"There are \" + str(text[0].count('A ')) + \" patients of blood type A\")\n",
+    "            print(\"There are \" + str(text[0].count('B ')) + \" patients of blood type B\")\n",
+    "            print(\"There are \" + str(text[0].count('AB ')) + \" patients of blood type AB\")\n",
+    "            print(\"There are \" + str(text[0].count('O ')) + \" patients of blood type O\")\n",
+    "            print(\"There are \" + str(text[0].count('OO ')) + \" patients of blood type OO\")\n",
+    "\n",
+    "bldcount()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1723621f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    def curconv(currency, amount):\n",
+    "      with open('exchangeRate.txt', 'r') as txt:\n",
+    "         rate = txt.readlines()\n",
+    "         txt.close()\n",
+    "         print(str(rate[0])[0:3])\n",
+    "  curconv(eyd, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "226d7e63",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_19116/2960547308.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\MEHER\\AppData\\Local\\Temp/ipykernel_19116/2960547308.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Question 9.\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "Question 9.\n",
+    "Answer:\n",
+    "    1) TypeError: unsupported operand type(s) for +: 'int' and 'str'\n",
+    "            \n",
+    "    2)IndexError: list index out of range\n",
+    "        \n",
+    "    3)ValueError: math domain error\n",
+    "        \n",
+    "    4)NameError: name 'x' is not defined\n",
+    "        \n",
+    "    5)FileNotFoundError: [Errno 2] No such file or directory: 'bldType.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b91a9a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2725fee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e781a2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f488871b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aeb6970",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd8c2ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecfcfaf2",
    "metadata": {},
    "outputs": [],
    "source": []
