--- a/Meharaj.MaharjanProblemSet1.ipynb
+++ b/Meharaj.MaharjanProblemSet1.ipynb
@@ -29,9 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Question 2:\n",
-    "a.\n",
-    "Answer: \n",
+    "//Question 2:\n",
+    "//a.\n",
+    "//Answer: \n",
     "    \n",
     " string givenString = \"Supercalifragilisticexpialidocious\";\n",
     "int i = 0;\n",
@@ -41,8 +41,8 @@
     "}\n",
     "Console.WriteLine(\"The number of letters in the givern word is \" +i);\n",
     "\n",
-    "b.\n",
-    "Answer:\n",
+    "//b.\n",
+    "//Answer:\n",
     " string givenString = \"Supercalifragilisticexpialidocious\";\n",
     " string subString = \"ice\";\n",
     "bool Contains= givenString.Contains(subString);\n",
@@ -50,14 +50,14 @@
     "Console.WriteLine(\"the subString  =\" + subString);\n",
     "Console.WriteLine(\"Given '{0}' contains the '{1}' = \" + Contains,givenString,subString); \n",
     "\n",
-    "c.\n",
-    "Answer:\n",
+    "//c.\n",
+    "//Answer:\n",
     " string[] longWords = { \"Supercalifragilisticexpialidocious\", \"Honorificabilitudinitatibus\", \"Bababadalgharaghtakamminarronnkonn\" };\n",
     "\n",
     " Console.WriteLine(longWords.Max());\n",
     "\n",
-    "d.\n",
-    "Answer:\n",
+    "//d.\n",
+    "//Answer:\n",
     " string[] composers = { \"Berlioz\", \"Borodin\", \"Brian\", \"Bartok\", \"Bellini\", \"Buxtehude\", \"Bernstein\" };\n",
     "Array.Sort(composers);\n",
     "Console.WriteLine(\"The first composer in the dictionary is \" + composers.First());\n",
@@ -71,6 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Question 3 answer\n",
     "using System;\n",
     "static void Main(){\n",
     "double side1 = 0, side2 =0, side3 =0;\n",
@@ -104,24 +105,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "3bfe478f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "data": {
+      "text/html": [
+       "\r\n",
+       "<div>\r\n",
+       "    <div id='dotnet-interactive-this-cell-15544.Microsoft.DotNet.Interactive.Http.HttpPort' style='display: none'>\r\n",
+       "        The below script needs to be able to find the current output cell; this is an easy method to get it.\r\n",
+       "    </div>\r\n",
+       "    <script type='text/javascript'>\r\n",
+       "async function probeAddresses(probingAddresses) {\r\n",
+       "    function timeout(ms, promise) {\r\n",
+       "        return new Promise(function (resolve, reject) {\r\n",
+       "            setTimeout(function () {\r\n",
+       "                reject(new Error('timeout'))\r\n",
+       "            }, ms)\r\n",
+       "            promise.then(resolve, reject)\r\n",
+       "        })\r\n",
+       "    }\r\n",
+       "\r\n",
+       "    if (Array.isArray(probingAddresses)) {\r\n",
+       "        for (let i = 0; i < probingAddresses.length; i++) {\r\n",
+       "\r\n",
+       "            let rootUrl = probingAddresses[i];\r\n",
+       "\r\n",
+       "            if (!rootUrl.endsWith('/')) {\r\n",
+       "                rootUrl = `${rootUrl}/`;\r\n",
+       "            }\r\n",
+       "\r\n",
+       "            try {\r\n",
+       "                let response = await timeout(1000, fetch(`${rootUrl}discovery`, {\r\n",
+       "                    method: 'POST',\r\n",
+       "                    cache: 'no-cache',\r\n",
+       "                    mode: 'cors',\r\n",
+       "                    timeout: 1000,\r\n",
+       "                    headers: {\r\n",
+       "                        'Content-Type': 'text/plain'\r\n",
+       "                    },\r\n",
+       "                    body: probingAddresses[i]\r\n",
+       "                }));\r\n",
+       "\r\n",
+       "                if (response.status == 200) {\r\n",
+       "                    return rootUrl;\r\n",
+       "                }\r\n",
+       "            }\r\n",
+       "            catch (e) { }\r\n",
+       "        }\r\n",
+       "    }\r\n",
+       "}\r\n",
+       "\r\n",
+       "function loadDotnetInteractiveApi() {\r\n",
+       "    probeAddresses([\"http://10.0.0.131:1000/\", \"http://127.0.0.1:1000/\"])\r\n",
+       "        .then((root) => {\r\n",
+       "        // use probing to find host url and api resources\r\n",
+       "        // load interactive helpers and language services\r\n",
+       "        let dotnetInteractiveRequire = require.config({\r\n",
+       "        context: '15544.Microsoft.DotNet.Interactive.Http.HttpPort',\r\n",
+       "                paths:\r\n",
+       "            {\r\n",
+       "                'dotnet-interactive': `${root}resources`\r\n",
+       "                }\r\n",
+       "        }) || require;\r\n",
+       "\r\n",
+       "            window.dotnetInteractiveRequire = dotnetInteractiveRequire;\r\n",
+       "\r\n",
+       "            window.configureRequireFromExtension = function(extensionName, extensionCacheBuster) {\r\n",
+       "                let paths = {};\r\n",
+       "                paths[extensionName] = `${root}extensions/${extensionName}/resources/`;\r\n",
+       "                \r\n",
+       "                let internalRequire = require.config({\r\n",
+       "                    context: extensionCacheBuster,\r\n",
+       "                    paths: paths,\r\n",
+       "                    urlArgs: `cacheBuster=${extensionCacheBuster}`\r\n",
+       "                    }) || require;\r\n",
+       "\r\n",
+       "                return internalRequire\r\n",
+       "            };\r\n",
+       "        \r\n",
+       "            dotnetInteractiveRequire([\r\n",
+       "                    'dotnet-interactive/dotnet-interactive'\r\n",
+       "                ],\r\n",
+       "                function (dotnet) {\r\n",
+       "                    dotnet.init(window);\r\n",
+       "                },\r\n",
+       "                function (error) {\r\n",
+       "                    console.log(error);\r\n",
+       "                }\r\n",
+       "            );\r\n",
+       "        })\r\n",
+       "        .catch(error => {console.log(error);});\r\n",
+       "    }\r\n",
+       "\r\n",
+       "// ensure `require` is available globally\r\n",
+       "if ((typeof(require) !==  typeof(Function)) || (typeof(require.config) !== typeof(Function))) {\r\n",
+       "    let require_script = document.createElement('script');\r\n",
+       "    require_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
+       "    require_script.setAttribute('type', 'text/javascript');\r\n",
+       "    \r\n",
+       "    \r\n",
+       "    require_script.onload = function() {\r\n",
+       "        loadDotnetInteractiveApi();\r\n",
+       "    };\r\n",
+       "\r\n",
+       "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    loadDotnetInteractiveApi();\r\n",
+       "}\r\n",
+       "\r\n",
+       "    </script>\r\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Enter the size of array \n",
-      "\n",
-      "The Even Elements are \n",
-      "\n",
-      "The Odd Elements are \n",
-      "\n"
+      "\r\n",
+      "(2,13): warning CS7022: The entry point of the program is global code; ignoring 'Main()' entry point.\r\n",
+      "\r\n"
      ]
     }
    ],
    "source": [
+    "//Question 4 answer\n",
     "using System;\n",
     "static void Main(){\n",
     "    int arrayLength = 0;\n",
@@ -170,10 +284,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c4034960",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r\n",
+      "(1,10): error CS1002: ; expected\r\n",
+      "\r\n",
+      "(1,11): error CS1002: ; expected\r\n",
+      "\r\n",
+      "(2,14): error CS1002: ; expected\r\n",
+      "\r\n",
+      "(2,20): error CS1002: ; expected\r\n",
+      "\r\n",
+      "(2,24): error CS1003: Syntax error, '(' expected\r\n",
+      "\r\n",
+      "(2,39): error CS1002: ; expected\r\n",
+      "\r\n",
+      "(2,41): error CS1002: ; expected\r\n",
+      "\r\n",
+      "(2,45): error CS1003: Syntax error, ',' expected\r\n",
+      "\r\n",
+      "(2,47): error CS1001: Identifier expected\r\n",
+      "\r\n",
+      "(2,47): error CS1026: ) expected\r\n",
+      "\r\n",
+      "(2,47): error CS1733: Expected expression\r\n",
+      "\r\n",
+      "(2,47): error CS1002: ; expected\r\n",
+      "\r\n"
+     ]
+    },
+    {
+     "ename": "Cell not executed",
+     "evalue": "compilation error",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "Question 5\n",
     "Answer given below for both questions a and b."
@@ -200,6 +352,7 @@
     }
    ],
    "source": [
+    "//Question 5 answer\n",
     "using System;\n",
     "void Main(){\n",
     "// code for question a\n",
@@ -294,8 +447,8 @@
     }
    ],
    "source": [
-    "Question 7\n",
-    "Answer:\n",
+    "#Question 7\n",
+    "#Answer:\n",
     "    \n",
     "def bldcount():\n",
     "    with open('bloodtype.txt', 'r') as txt:\n",
@@ -319,13 +472,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "    def curconv(currency, amount):\n",
-    "      with open('exchangeRate.txt', 'r') as txt:\n",
-    "         rate = txt.readlines()\n",
-    "         txt.close()\n",
-    "         print(str(rate[0])[0:3])\n",
-    "  curconv(eyd, 12)"
+    "#Question 8 \n",
+    "# answer:\n",
+    "   "
    ]
   },
   {
@@ -363,7 +512,10 @@
    "id": "9b91a9a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Question 10 \n",
+    "#Answer:"
+   ]
   },
   {
    "cell_type": "code",
@@ -416,21 +568,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "file_extension": ".cs",
+   "mimetype": "text/x-csharp",
+   "name": "C#",
+   "pygments_lexer": "csharp",
+   "version": "8.0"
   }
  },
  "nbformat": 4,
